fix(combobox): remove extra margin

--- a/packages/calcite-components/src/components/combobox/combobox.scss
+++ b/packages/calcite-components/src/components/combobox/combobox.scss
@@ -94,7 +94,6 @@
     p-0;
 
   gap: var(--calcite-internal-combobox-space-small);
-  margin-inline-end: var(--calcite-internal-combobox-space-small);
 
   &.selection-display-fit,
   &.selection-display-single {
